Fixed docker-compose errors. Had to do docker-compose build before starting.

--- a/ticketscan-backend/src/main/resources/application.properties
+++ b/ticketscan-backend/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ticketscan
+spring.datasource.url=jdbc:postgresql://db:5432/ticketscan
 spring.datasource.username=ticketscan
 spring.datasource.password=ticketscan
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
