--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,19 @@ version: '3.1'
 services:
   web:
     build: ./ticketscan-backend/
+    restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - "db"
 
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
       POSTGRES_USER: ticketscan
       POSTGRES_PASSWORD: ticketscan
+      POSTGRES_DB: ticketscan
 
   adminer:
     image: adminer
