--- a/ticketscan-backend/Dockerfile
+++ b/ticketscan-backend/Dockerfile
@@ -1,4 +1,3 @@
 FROM openjdk:8-jdk-alpine
-RUN "./mvnw package -Dmaven.test.skip=true"
 COPY /target/*.jar /ticketscan.jar
-ENTRYPOINT ["java", "-jar", "/ticketscan.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/ticketscan.jar"]
