--- a/ticketscan-frontend/package.json
+++ b/ticketscan-frontend/package.json
@@ -6,11 +6,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --port 8888",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "axios": "^0.18.0",
+    "vue": "^2.5.11",
+    "vue-qrcode-reader": "^0.8.3"
   },
   "browserslist": [
     "> 1%",
